kubernetes/metallb/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    app.kubernetes.io/name: metallb
    name: metallb-system
---
# Default deny all ingress & egress policy, except allow kube-dns
# All traffic except this must be explicity allowed.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-except-kube-dns
  namespace: metallb-system
  labels:
    app.kubernetes.io/name: metallb
spec:
  podSelector: {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  policyTypes:
  - Ingress
  - Egress
