kubernetes/metallb/metallb.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: metallb
    app.kubernetes.io/component: speaker
  name: speaker
  namespace: metallb-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/component: speaker
  template:
    metadata:
      annotations:
        prometheus.io/port: '7472'
        prometheus.io/scrape: 'true'
      labels:
        app.kubernetes.io/name: metallb
        app.kubernetes.io/component: speaker
    spec:
      containers:
      - args:
        - --port=7472
        - --config=config
        image: metallb/speaker:v0.9.3
        imagePullPolicy: Always
        name: speaker
        ports:
        - containerPort: 7472
          name: monitoring
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - SYS_ADMIN
            drop:
            - ALL
          readOnlyRootFilesystem: true
      hostNetwork: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      serviceAccountName: speaker
      terminationGracePeriodSeconds: 2
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: metallb
    app.kubernetes.io/component: controller
  name: controller
  namespace: metallb-system
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/component: controller
  template:
    metadata:
      annotations:
        prometheus.io/port: '7472'
        prometheus.io/scrape: 'true'
      labels:
        app.kubernetes.io/name: metallb
        app.kubernetes.io/component: controller
    spec:
      containers:
      - args:
        - --port=7472
        - --config=config
        image: metallb/controller:v0.9.3
        imagePullPolicy: Always
        name: controller
        ports:
        - containerPort: 7472
          name: monitoring
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: controller
      terminationGracePeriodSeconds: 0
---
# Allow metallb-controller to talk to K8S API for secret decrypt/save
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: metallb-controller
  namespace: metallb-system
  labels:
    app.kubernetes.io/name: metallb
    app.kubernetes.io/component: controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/component: controller
  egress:
  - ports:
    - port: 443  # kubernetes.default.svc Port
      protocol: TCP
    - port: 6443  # kubernetes.default.svc TargetPort
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.2.0/26  # k8s-m-[arm64|amd64]-[00-0x]
    - ipBlock:
        cidr: 10.233.0.1/32  # kubernetes.default.svc
    - ipBlock:
        cidr: 192.168.99.100/32  # minikube IP kubernetes.default.svc
---
# Allow metallb-speaker to talk to upstream BGP peer(s)
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: metallb-speaker
  namespace: metallb-system
  labels:
    app.kubernetes.io/name: metallb
    app.kubernetes.io/component: speaker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/component: speaker
  egress:
  - ports:
    - port: 179  # BGP Port
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.2.1/32  # edgerouter
